# soup

./: CMakeLists.txt  README.md
cmake/: MSVC_FLAGS.cmake  WIN_FLAGS.cmake
gui_qt/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.hpp  aboutdialog.ui  diffdialog.cpp  diffdialog.hpp  diffdialog.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  policyeventlog.cpp  policyeventlog.hpp  policyeventlog.ui  policysetting.cpp  policysetting.hpp  policysetting.ui  policysheet.cpp  policysheet.hpp  policysheet.ui  qtcommon.hpp  singlepolicysheet.cpp  singlepolicysheet.hpp  singlepolicysheet.ui  singlepolicysheetdoubleext.cpp  singlepolicysheetdoubleext.hpp  singlepolicysheetdoubleext.ui  singlepolicysheetinterface.hpp
gui_qt/test/: main.cpp  test_aboutdialog.cpp  test_diffdialog.cpp  test_help.hpp  test_policyeventlog.cpp  test_policysettings.cpp  test_singlepolicysheet.cpp  test_singlepolicysheetdoubleext.cpp
lib/: CMakeLists.txt  IniParser.cpp  IniParser.hpp  common.hpp  evtlog.hpp  policy.cpp  policy.hpp  registry.cpp  registry.hpp  unique_handle.hpp  uuid.hpp  win_handles.hpp
lib/test/: main.cpp  settings.hpp  test_common.cpp  test_evtlog.cpp  test_ini.cpp  test_policy.cpp  test_registry.cpp  test_uuid.cpp
lib/test/data/: invalidpolicy1.ini  policy1.ini
lib/test/data/hive/: test.hive  test.hive.LOG1
res/: info.in.rc  resources.qrc
